python/examples/basics/print.err
  File "examples/basics/print.py", line 1
    print "hello"
                ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print("hello")?
